@@ -2,6 +2,8 @@ Version 5.4 (?? April 2014)
   * Fixed bug in forecast.tbats() and forecast.bats() when ts.frequency does not match seasonal.periods.
 	* Fixed bug in getResponse.lm() when there's a logged dependent variable.
   * Modified ets() to avoid problems when data contains large numbers.
+  * Modified ets() to produce forecasts when the data are constant.
+  * Improved arima.errors() to find xreg more often, and to return an error if it can't be found.
 
 Version 5.3 (24 March 2014)
   * Unit tests added
